argocd/base/argo-cd-notifications-bot-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argo-cd-notifications-bot
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/app-root: "/"
spec:
  tls:
  - hosts:
    - argocd-notifications.apps.argoproj.io
    secretName: argocd-notifications-secret
  rules:
  - host: argocd-notifications.apps.argoproj.io
    http:
      paths:
      - path: /
        backend:
          serviceName: argocd-notifications-bot
          servicePort: 80
