argocd/base/argo-cd-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-ui
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/app-root: "/"
spec:
  tls:
  - hosts:
    - cd.apps.argoproj.io
    secretName: argocd-secret
  rules:
  - host: cd.apps.argoproj.io
    http:
      paths:
      - path: /
        backend:
          service:
            name: argocd-server
            port:
              name: http
