argocd/base/argo-cd-webhook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-webhook
spec:
  rules:
    - host: cd.apps.argoproj.io
      http:
        paths:
          - path: /api/webhook
            pathType: Prefix
            backend:
              service:
                name: argocd-applicationset-controller
                port:
                  number: 7000
  tls:
    - hosts:
        - cd.apps.argoproj.io
      secretName: argocd-secret
