argocd/base/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/app-root: "/"
spec:
  rules:
  - host: jenkins.apps.argoproj.io
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: http
